[package]
name = "kvs"
authors = ["fangliming <limingfang97@outlook.com"]
version = "0.1.0"
edition = "2018"
description = "A key-value store CLI program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = {version = "~2.27.0", features = ["yaml"]}